done ( without responsive)

--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>europebet</title>
-
+    <link rel="shortcut icon" type="image" href="assets/logo.png">
     <link rel="stylesheet" href="style/reset.css" />
     <link rel="stylesheet" href="style/style.css" />
-    <script
-      src="https://kit.fontawesome.com/1973ae3413.js"
-      crossorigin="anonymous"
-    ></script>
+    
   </head>
   <body>
     <!-- section 1-->
@@ -417,50 +414,7 @@
     </section>
 
     <!-- scetion -6-->
-    <!-- <section>
-      <div class="main-section-6">
-        <div class="section-6-terms">
-          <p class="section-6-p">წესები და პირობები</p>
-
-          <div class="section-6-terms-1">
-            <p class="section-6-terms-p1">
-              როდის იწყება და რა ფორმატით გაიმართება აქცია
-            </p>
-
-            <div class="section-6-icon">   
-            </div>
-                
-
-          </div>
-
-         <div class="terms-text">
-           <p> წესები და პირობები </p>
-            </div>
-
-
-          <div class="section-6-terms-1">
-            <p class="section-6-terms-p1">როგორ მივიღო აქციაში მონაწილეობა?</p>
-            <div class="section-6-icon">   
-            </div>
-          </div>
-
-          <div class="terms-text">
-            <p> წესები და პირობები </p>
-             </div>
-
-          <div class="section-6-terms-1">
-            <p class="section-6-terms-p1">სხვადასხვა</p>
-            <div class="section-6-icon">   
-            </div>
-          </div>
-
-          <div class="terms-text">
-            <p> წესები და პირობები </p>
-             </div>
-
-        </div>
-      </div>
-    </section>-->
+  
 
     <section class="main-section-6">
       <p class="section-6-p">წესები და პირობები</p>
